--- a/17-Modern-JS-Modules-Tooling/package.json
+++ b/17-Modern-JS-Modules-Tooling/package.json
@@ -1,17 +1,19 @@
 {
-  "name": "17-modern-js-modules-tooling",
+  "name": "learning-parcel",
+  "source": "./index.html",
+  "browserslist": "> 0.5%, last 2 versions, not dead",
   "version": "1.0.0",
-  "description": "",
-  "main": "script.js",
   "scripts": {
-    "start": "parcel index.html",
-    "build": "parcel build index.html"
+    "start": "parcel",
+    "build": "parcel build"
   },
-  "author": "Leandro Reis",
+  "author": "Leandro",
   "license": "ISC",
   "dependencies": {
+    "core-js": "^3.20.3",
     "leaflet": "^1.7.1",
-    "lodash-es": "^4.17.21"
+    "lodash-es": "^4.17.21",
+    "regenerator-runtime": "^0.13.9"
   },
   "devDependencies": {
     "parcel": "^2.2.1"
