--- a/18-forkify/package.json
+++ b/18-forkify/package.json
@@ -5,7 +5,7 @@
   "description": "Recipe application",
   "scripts": {
     "start": "parcel",
-    "build": "parcel build"
+    "build": "parcel build --dist-dir ./dist"
   },
   "author": "Leandro Reis",
   "license": "ISC",
@@ -15,7 +15,7 @@
   },
   "dependencies": {
     "core-js": "^3.20.3",
-    "fractional": "^1.0.0",
+    "fracty": "^1.0.9",
     "regenerator-runtime": "^0.13.9"
   }
 }
